--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="header-center">
-        <h1>City Care Hospital</h1>
+        <h1>Medway Hospitals</h1>
         <p>Doctor Search & Appointment Portal</p>
     </div>
 
@@ -69,3 +69,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
